testsuite/bsc.evaluator/dynamic/errors/ERulesMux2a_ArrSel.bsv.bsc-vcomp-out.expected
checking package dependencies
compiling ERulesMux2a_ArrSel.bsv
code generation for sysERulesMux2a_ArrSel starts
Error: "ERulesMux2a_ArrSel.bsv", line 26, column 12: (G0070)
  The expression for a module instantiation could not be evaluated. Modules
  must be determined at compile time and cannot be computed dynamically.
  During elaboration of `sysERulesMux2a_ArrSel' at "ERulesMux2a_ArrSel.bsv",
  line 2, column 8.
